# queryparser

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  Makefile  MySQLLexer.g4  README.md  README.rst  generate.py  make.py  pyproject.toml  queryparser.py  requirements.txt  setup.py  test_queries.py  update-notes.md
.github/workflows/: pytest.yml
docs/: dev-notes.md  development.md  examples.md
mysql/: queryparser.py
queryparser/: __init__.py  parser.py  run.py  tests.py  visitor.py
queryparser/adql/: ADQLLexer.g4  ADQLParser.g4  Makefile  adqltranslator.py
queryparser/examples/: adql_queries.py  run.py  test_queries.py
queryparser/mysql/: Makefile  MySQLLexer.g4  MySQLParser.g4  __init__.py  mysqlparser.py  mysqlprocessor.py  queryparser.py
queryparser/test/: __init__.py  adql_queries.py  broken_queries.py  run.py  test_queries.py
src/queryparser/: __init__.py
src/queryparser/adql/: ADQLLexer.g4  ADQLParser.g4  __init__.py  adqltranslator.py
src/queryparser/common/: __init__.py  common.py  commonlisteners.py
src/queryparser/examples/: adql_queries.py  broken_queries.py  run.py  test_queries.py
src/queryparser/exceptions/: __init__.py
src/queryparser/mysql/: MySQLLexer.g4  MySQLParser.g4  __init__.py  mysqllisteners.py  mysqlprocessor.py
src/queryparser/postgresql/: PostgreSQLLexer.g4  PostgreSQLParser.g4  __init__.py  postgresqllisteners.py  postgresqlprocessor.py
src/queryparser/testing/: __init__.py  test_adql.py  test_mysql.py  test_postgresql.py  tests.yaml  utils.py
test/: broken_queries.py
testing/: __init__.py  adql_queries.py  run.py  test_adql.py
utils/: adql_queries.py  convert_test.py  mysql_adql_queries.py  old_test_queries.py  run.py  test_mysql.py  test_pg.py
