[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "queryparser-python3"
description = "Parses PostgreSQL/MySQL and translates ADQL to PostgreSQL/MySQL."
readme = "README.md"
version = "0.7.0"
license = {text = "Apache-2.0"}
authors = [
    {name = "Gal Matijevic", email = "gmatijevic@aip.de"},
]
maintainers = [
    {name = "Kirill Makan", email = "kmakan@aip.de"},
]
requires-python = ">=3.9"
dependencies = [
    "antlr4-python3-runtime==4.13.1",
]

[project.optional-dependencies]
test = [
    "pytest~=8.2.0",
    "PyYAML~=6.0",
]

[tool.setuptools]
packages = [
    "queryparser",
    "queryparser.adql",
    "queryparser.common",
    "queryparser.mysql",
    "queryparser.postgresql",
    "queryparser.exceptions"
]
package-dir = {"" = "lib"}
include-package-data = true
