[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "queryparser-python3"
description = "Package for parsing PostgreSQL/MySQL and translating ADQL to PostgreSQL/MySQL."
readme = "README.md"
dynamic = ["version"]
license = {text = "Apache-2.0"}
authors = [
    {name = "Gal Matijevic", email = "gmatijevic@aip.de"},
]
maintainers = [
    {name = "Kirill Makan", email = "kmakan@aip.de"},
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
    "antlr4-python3-runtime==4.13.1",
]

[project.optional-dependencies]
test = [
    "pytest~=8.2.0",
    "PyYAML~=6.0",
]

[project.urls]
Repository = "https://github.com/aipescience/queryparser.git"
Issues = "https://github.com/aipescience/queryparser/issues"
Changelog = "https://github.com/aipescience/queryparser/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "queryparser.__version__"}

[tool.setuptools]
packages = [
    "queryparser",
    "queryparser.adql",
    "queryparser.common",
    "queryparser.mysql",
    "queryparser.postgresql",
    "queryparser.exceptions"
]
package-dir = {"" = "lib"}
include-package-data = true
